src/DataDistributionManager/DataDistributionManager_c.h

	// IDataDistributionSubsystem interface

	// DLLEXPORT HRESULT DLLCALL IDataDistributionSubsystem_Initialize(void* IDataDistributionSubsystem_instance, void*, const char* szMyAddress, const char* conf_file, const char* channelTrailer);
	// DLLEXPORT HRESULT DLLCALL IDataDistributionSubsystem_Initialize2(void* IDataDistributionSubsystem_instance, void*, const char* szMyAddress, const char* arrayParams[], int len, const char* channelTrailer);
	// DLLEXPORT void* DLLCALL IDataDistributionSubsystem_GetCallbacks(void* IDataDistributionSubsystem_instance);
	DLLEXPORT int DLLCALL IDataDistributionSubsystem_GetServerLostTimeout(void* IDataDistributionSubsystem_instance);
	DLLEXPORT size_t DLLCALL IDataDistributionSubsystem_GetMaxMessageSize(void* IDataDistributionSubsystem_instance);
	DLLEXPORT HRESULT DLLCALL IDataDistributionSubsystem_Start(void* IDataDistributionSubsystem_instance, DWORD dwMilliseconds);
	DLLEXPORT HRESULT DLLCALL IDataDistributionSubsystem_Stop(void* IDataDistributionSubsystem_instance, DWORD dwMilliseconds);
	DLLEXPORT HANDLE DLLCALL IDataDistributionSubsystem_CreateChannel(void* IDataDistributionSubsystem_instance, const char* channelName, void* dataCb, DDM_CHANNEL_DIRECTION direction = DDM_CHANNEL_DIRECTION::ALL, const char* arrayParams[] = NULL, int len = 0);
	DLLEXPORT HRESULT DLLCALL IDataDistributionSubsystem_StartChannel(void* IDataDistributionSubsystem_instance, HANDLE channelHandle, DWORD dwMilliseconds);
	DLLEXPORT HRESULT DLLCALL IDataDistributionSubsystem_StopChannel(void* IDataDistributionSubsystem_instance, HANDLE channelHandle, DWORD dwMilliseconds);
	DLLEXPORT void DLLCALL IDataDistributionSubsystem_SetParameter(void* IDataDistributionSubsystem_instance, HANDLE channelHandle, const char* paramName, const char* paramValue);
	DLLEXPORT void DLLCALL IDataDistributionSubsystem_SetParameter2(void* IDataDistributionSubsystem_instance, HANDLE channelHandle, DDM_GENERAL_PARAMETER paramId, const char* paramValue);
	DLLEXPORT const char* DLLCALL IDataDistributionSubsystem_GetParameter(void* IDataDistributionSubsystem_instance, HANDLE channelHandle, const char* paramName);
	DLLEXPORT const char* DLLCALL IDataDistributionSubsystem_GetParameter2(void* IDataDistributionSubsystem_instance, HANDLE channelHandle, DDM_GENERAL_PARAMETER paramId);
	DLLEXPORT HRESULT DLLCALL IDataDistributionSubsystem_Lock(void* IDataDistributionSubsystem_instance, HANDLE channelHandle, DWORD timeout);
	DLLEXPORT HRESULT DLLCALL IDataDistributionSubsystem_Unlock(void* IDataDistributionSubsystem_instance, HANDLE channelHandle);
	DLLEXPORT HRESULT DLLCALL IDataDistributionSubsystem_SeekChannel(void* IDataDistributionSubsystem_instance, HANDLE channelHandle, int64_t position);
	DLLEXPORT HRESULT DLLCALL IDataDistributionSubsystem_DeleteChannel(void* IDataDistributionSubsystem_instance, HANDLE channelHandle);
	DLLEXPORT HRESULT DLLCALL IDataDistributionSubsystem_WriteOnChannel(void* IDataDistributionSubsystem_instance, HANDLE channelHandle, const char* key, size_t keyLen, void *param, size_t dataLen, const BOOL waitAll = FALSE, const int64_t timestamp = -1);
	DLLEXPORT HRESULT DLLCALL IDataDistributionSubsystem_ReadFromChannel(void* IDataDistributionSubsystem_instance, HANDLE channelHandle, int64_t offset, size_t* dataLen, void** param);
	DLLEXPORT HRESULT DLLCALL IDataDistributionSubsystem_ChangeChannelDirection(void* IDataDistributionSubsystem_instance, HANDLE channelHandle, DDM_CHANNEL_DIRECTION direction);
	// IDataDistributionMastershipCommon
	DLLEXPORT HRESULT DLLCALL IDataDistributionMastershipCommon_Initialize(void* IDataDistribution_instance, void* iddmcb, const char* szMyAddress = NULL, const char* arrayParams[] = NULL, int len = 0);
	DLLEXPORT HRESULT DLLCALL IDataDistributionMastershipCommon_Start(void* IDataDistribution_instance, DWORD dwMilliseconds);
	DLLEXPORT HRESULT DLLCALL IDataDistributionMastershipCommon_Stop(void* IDataDistribution_instance, DWORD dwMilliseconds);
	DLLEXPORT BOOL DLLCALL IDataDistributionMastershipCommon_GetIamNextPrimary(void* IDataDistribution_instance);
	DLLEXPORT BOOL DLLCALL IDataDistributionMastershipCommon_RequestIAmNextPrimary(void* IDataDistribution_instance);
	DLLEXPORT void DLLCALL IDataDistributionMastershipCommon_GetClusterIndexes(void* IDataDistribution_instance, int64_t arrayElements[], size_t* length);
	DLLEXPORT DDM_INSTANCE_STATE DLLCALL IDataDistributionMastershipCommon_GetStateOf(void* IDataDistribution_instance, int64_t index);
	DLLEXPORT void* DLLCALL IDataDistributionMastershipCommon_GetClusterHealth(void* IDataDistribution_instance, int64_t index);
	DLLEXPORT DDM_INSTANCE_STATE DLLCALL IDataDistributionMastershipCommon_GetMyState(void* IDataDistribution_instance);
	DLLEXPORT void DLLCALL IDataDistributionMastershipCommon_ChangeMyState(void* IDataDistribution_instance, DDM_INSTANCE_STATE newState);
	DLLEXPORT void DLLCALL IDataDistributionMastershipCommon_ChangeState(void* IDataDistribution_instance, size_t instanceId, DDM_INSTANCE_STATE newState);
	DLLEXPORT int64_t DLLCALL IDataDistributionMastershipCommon_GetLocalServerId(void* IDataDistribution_instance);
	DLLEXPORT int64_t DLLCALL IDataDistributionMastershipCommon_GetPrimaryServerId(void* IDataDistribution_instance);
	DLLEXPORT int64_t DLLCALL IDataDistributionMastershipCommon_GetMessageDelay(void* IDataDistribution_instance);
	DLLEXPORT int64_t DLLCALL IDataDistributionMastershipCommon_GetUpTime(void* IDataDistribution_instance);